force-app/main/default/objects/Trigger_Settings__c/fields/Case_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Case_Trigger_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>