force-app/main/default/objects/Trigger_Settings__c/fields/Contract_Resource_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Contract_Resource_Trigger_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contract_Resource_Trigger_Enabled</label>
    <type>Checkbox</type>
</CustomField>