force-app/main/default/objects/Trigger_Settings__c/fields/DIPaymentsInvoice_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DIPaymentsInvoice_Trigger_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DIPaymentsInvoice_Trigger_Enabled</label>
    <type>Checkbox</type>
</CustomField>