force-app/main/default/objects/Trigger_Settings__c/fields/Timesheet_Entry_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Entry_Trigger_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Timesheet_Entry_Trigger_Enabled</label>
    <type>Checkbox</type>
</CustomField>